--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ header{
 }
 
 #headshot{
-    width:75%;
+    height:50%;
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
