fixes some erroneous end tags

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ header{
 }
 
 #headshot{
-    height:50%;
+    max-width: 300px;
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
