Sets icons and experience levels for skills.html. Next Step, add carousels for each column

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ a{
     font-size: 16px;
 }
 
+.plain{
+    list-style: none;
+    padding-bottom: 25px;
+}
 
 .container{
     margin: auto;
@@ -29,7 +33,7 @@ a{
 }
 
 .small-icon{
-    height: 100px;
+    height: 75px;
     border-radius: 10px;
 }
 
@@ -70,7 +74,16 @@ header{
 }
 
 
-/* MAIN */
+/* FOOTER */
+footer{
+    text-align: center;
+    margin-top: 250px;
+    background-color: rgb(125, 100, 52);
+    min-height: 50px;
+}
+
+
+/*  INDEX MAIN */
 .main{
     padding: 20px 0 20px 0 ;
     background-color: #c0ad8c;
@@ -79,15 +92,15 @@ header{
 }
 
 #headshot{
-    max-width: 300px;
+    max-width: 60%;
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
     border-radius: 10px;
     border-width: 5px;
     border-color: darkolivegreen;
-    
 }
+
 
 #main-image{
     width:50%;
@@ -125,17 +138,13 @@ header{
 
 .col{
     color: rgb(0, 41, 0);
-    width: 33%;
+    width: 30%;
     display: inline-flex;
-    margin: 0 75px 0 75px;
+    margin-left: 50px;
 }
 
-/* FOOTER */
-footer{
+/* SKILLS */
+
+.center-section{
     text-align: center;
-    margin-top: 250px;
-    background-color: rgb(125, 100, 52);
-    min-height: 50px;
-    /* border-top:rgb(212, 238, 255) 15px solid */
 }
-
