--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,16 @@ body{
     color:lightgrey;
     min-width: 800px;
     max-width: 1600px;  
-    background-color: #c0ad8c; 
-     
+    background-color: gray;      
+}
+
+.visualize{
+    border: black 5px dashed;
+}
+
+#grad{
+    background-image: linear-gradient(to bottom right,#c0ad8c, gray );
+    background-repeat: no-repeat;
 }
 
 a{
@@ -78,7 +86,7 @@ header{
 footer{
     text-align: center;
     margin-top: 250px;
-    background-color: rgb(125, 100, 52);
+    background-color: gray;
     min-height: 50px;
 }
 
@@ -86,9 +94,9 @@ footer{
 /*  INDEX MAIN */
 .main{
     padding: 20px 0 20px 0 ;
-    background-color: #c0ad8c;
+    /* background-color: #c0ad8c; */
     min-height: 400px;
-    border-bottom: #c0ad8c 7px solid;
+    /* border-bottom: #c0ad8c 7px solid; */
 }
 
 #headshot{
@@ -148,3 +156,13 @@ footer{
 .center-section{
     text-align: center;
 }
+
+.viz-table {
+    width: 50%;
+    border: black 2px solid
+}
+
+/* .project-table > td{
+    width: 50%;
+    border: black 2px solid
+} */
