--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,15 @@ body{
     background-color: gray;      
 }
 
+#back-button{
+    background-color: rgb(0, 217, 98);
+    min-width: 125px;
+    min-height: 60px;
+    text-align: center;
+    border-radius: 5px;
+    margin: auto;
+}
+
 .visualize{
     border: black 5px dashed;
 }
@@ -23,7 +32,8 @@ body{
 
 }
 .screen-shot{
-    max-height: 600px;
+    max-height: 400px;
+    max-width: 400px;
     padding: 25px
 }
 
@@ -31,8 +41,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 a{
@@ -189,3 +199,11 @@ footer{
     width: 50%;
     border: black 2px solid
 } */
+
+/* Sample images */
+
+img:hover{
+    max-width: 1200px;
+    max-height: 1200px;
+
+}
