--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,15 @@ body{
 }
 
 #back-button{
-    background-color: rgb(0, 217, 98);
-    min-width: 125px;
-    min-height: 60px;
+    background-color: rgb(39, 129, 79);
+    color: lightgray;
+    min-width: 70px;
+    min-height: 35px;
     text-align: center;
     border-radius: 5px;
-    margin: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .visualize{
@@ -202,8 +205,17 @@ footer{
 
 /* Sample images */
 
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 img:hover{
     max-width: 1200px;
     max-height: 1200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
 }
