--- a/styles3.css
+++ b/styles3.css
@@ -1,24 +1,11 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
     font-size: 15px;
     line-height: 1.5;
-    color:lightgrey;
+    color: navy;
     min-width: 800px;
     max-width: 1600px;  
-    background-color: gray;      
-    min-height: 80%;
-}
-
-#back-button{
-    background-color: rgb(39, 129, 79);
-    color: lightgray;
-    min-width: 70px;
-    min-height: 35px;
-    text-align: center;
-    border-radius: 5px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: aliceblue;      
 }
 
 .visualize{
@@ -26,7 +13,7 @@ body{
 }
 
 #grad{
-    background-image: linear-gradient(to bottom right,#c0ad8c, gray );
+    background-image: linear-gradient(to bottom ,#ebf3ff, rgb(134, 130, 218) );
     background-repeat: no-repeat;
 }
 
@@ -51,7 +38,7 @@ body{
 
 a{
     text-decoration: none;
-    color: lightgray;
+    color: aliceblue;
     font-size: 16px;
 }
 
@@ -85,10 +72,11 @@ a{
 
 /* HEADER */
 header{
-    background-color: rgb(48, 63, 51);
+    background-color: darkblue;
     padding: 0;
     min-height: 120px;
-    border-bottom: #875d48 7px solid;
+    border-bottom: #0d0055 7px solid;
+    color: aliceblue;
 }
 
 #name-plate{
@@ -112,11 +100,11 @@ header{
 }
 
 .navigation :hover{
-    color:rgb(126, 211, 143)
+    color:blueviolet;
 }
 
 .current{
-    color: rgb(119, 226, 43);
+    color: royalblue;
     /* font-size: 24px; */
     font-weight: bolder;
 }
@@ -126,8 +114,8 @@ header{
 footer{
     text-align: center;
     margin-top: 250px;
-    background-color: gray;
-    max-height: 50px;
+    background-color: rgb(134, 130, 218);
+    min-height: 50px;
 }
 
 
@@ -146,7 +134,7 @@ footer{
     border-style: solid;
     border-radius: 10px;
     border-width: 5px;
-    border-color: darkolivegreen;
+    border-color: navy;
 }
 
 
@@ -158,17 +146,17 @@ footer{
 #main-info{
     width: 50%;
     float: right;
-    color: rgb(48, 63, 51)
+    color: navy;
 }
 
 #main-info a{
-    color: rgb(62, 128, 62)    
+    color: navy    
 }
 
 #main-info p::first-line{
     font-size: 20px;
     font-weight: bold;
-    color:rgb(82, 149, 96)
+    color:rgb(89, 82, 149)
 }
 
 #intent-statement{
@@ -185,7 +173,7 @@ footer{
 }
 
 .col{
-    color: rgb(0, 41, 0);
+    color: navy;
     width: 30%;
     display: inline-flex;
     margin-left: 50px;
@@ -199,7 +187,7 @@ footer{
 
 .viz-table {
     width: 50%;
-    border: black 2px solid
+    border: navy;
 }
 
 .skills-column p{
@@ -210,7 +198,7 @@ footer{
     border: black 2px solid
 } */
 
-/* Sample images */
+/* Project */
 
 img{
     display: block;
@@ -225,4 +213,16 @@ img:hover{
     margin-left: auto;
     margin-right: auto;
 
+}
+
+#back-button{
+    background-color: navy;
+    color: aliceblue;
+    min-width: 70px;
+    min-height: 35px;
+    text-align: center;
+    border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
