--- a/styles4.css
+++ b/styles4.css
@@ -1,24 +1,11 @@
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
     font-size: 15px;
     line-height: 1.5;
-    color:lightgrey;
+    color: darkslategray;
     min-width: 800px;
     max-width: 1600px;  
-    background-color: gray;      
-    min-height: 80%;
-}
-
-#back-button{
-    background-color: rgb(39, 129, 79);
-    color: lightgray;
-    min-width: 70px;
-    min-height: 35px;
-    text-align: center;
-    border-radius: 5px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: lightgrey;      
 }
 
 .visualize{
@@ -26,15 +13,15 @@ body{
 }
 
 #grad{
-    background-image: linear-gradient(to bottom right,#c0ad8c, gray );
+    background-image: linear-gradient(to bottom ,#ffffff, lightgrey );
     background-repeat: no-repeat;
 }
 
 #landing-bg{
     background-image: url(/jonbbagby/images/computer.jpg);
     opacity: 0.75;
-
 }
+
 .screen-shot{
     max-height: 400px;
     max-width: 400px;
@@ -51,7 +38,7 @@ body{
 
 a{
     text-decoration: none;
-    color: lightgray;
+    color: aliceblue;
     font-size: 16px;
 }
 
@@ -85,10 +72,11 @@ a{
 
 /* HEADER */
 header{
-    background-color: rgb(48, 63, 51);
+    background-color: #2b2d2f;
     padding: 0;
     min-height: 120px;
-    border-bottom: #875d48 7px solid;
+    border-bottom: lightgray 7px solid;
+    color: aliceblue;
 }
 
 #name-plate{
@@ -112,11 +100,11 @@ header{
 }
 
 .navigation :hover{
-    color:rgb(126, 211, 143)
+    color:royalblue;
 }
 
 .current{
-    color: rgb(119, 226, 43);
+    color: gray;
     /* font-size: 24px; */
     font-weight: bolder;
 }
@@ -126,8 +114,8 @@ header{
 footer{
     text-align: center;
     margin-top: 250px;
-    background-color: gray;
-    max-height: 50px;
+    background-color: rgb(182, 182, 182);
+    min-height: 50px;
 }
 
 
@@ -146,7 +134,7 @@ footer{
     border-style: solid;
     border-radius: 10px;
     border-width: 5px;
-    border-color: darkolivegreen;
+    border-color: navy;
 }
 
 
@@ -158,17 +146,21 @@ footer{
 #main-info{
     width: 50%;
     float: right;
-    color: rgb(48, 63, 51)
+    color: navy;
 }
 
 #main-info a{
-    color: rgb(62, 128, 62)    
+    color: navy    
+}
+
+#main-info a :hover{
+    color: navy    
 }
 
 #main-info p::first-line{
     font-size: 20px;
     font-weight: bold;
-    color:rgb(82, 149, 96)
+    color:rgb(89, 82, 149)
 }
 
 #intent-statement{
@@ -185,7 +177,7 @@ footer{
 }
 
 .col{
-    color: rgb(0, 41, 0);
+    color: navy;
     width: 30%;
     display: inline-flex;
     margin-left: 50px;
@@ -197,20 +189,28 @@ footer{
     text-align: center;
 }
 
-.viz-table {
-    width: 50%;
-    border: black 2px solid
-}
 
 .skills-column p{
     padding-bottom: 10px;
 }
+
 /* .project-table > td{
     width: 50%;
     border: black 2px solid
 } */
 
-/* Sample images */
+/* Project */
+.viz-table {
+    width: 50%;
+    border: #2b2d2f 2px solid;
+    
+}
+
+.viz-table-header{
+    background-image: linear-gradient(to bottom ,#2b2d2f, black );
+    background-color: #2b2d2f;
+    color:rgb(182, 182, 182);
+}
 
 img{
     display: block;
@@ -225,4 +225,16 @@ img:hover{
     margin-left: auto;
     margin-right: auto;
 
+}
+
+#back-button{
+    background-color: navy;
+    color: aliceblue;
+    min-width: 70px;
+    min-height: 35px;
+    text-align: center;
+    border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
