--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,9 +9,6 @@ body{
     min-height: 80%;
 }
 
-div{
-    border:3px solid chartreuse;
-}
 
 #back-button{
     background-color: rgb(39, 129, 79);
@@ -148,7 +145,6 @@ header{
     font-weight: bolder;
 }
 
-
 /* FOOTER */
 footer{
     text-align: center;
@@ -167,7 +163,7 @@ footer{
 }
 
 #headshot{
-    max-width: 60%;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
     border-style: solid;
@@ -175,7 +171,6 @@ footer{
     border-width: 5px;
     border-color: darkolivegreen;
 }
-
 
 #main-image{
     width:50%;
@@ -252,4 +247,46 @@ img:hover{
     margin-left: auto;
     margin-right: auto;
 
+}
+
+.words{
+    border: 3px solid darkolivegreen;
+    border-radius: 7px;
+}
+
+.btn{
+    margin: 1px;
+}
+
+/* tab-pane section */
+#tab-header {
+    padding-right: 0px;
+    text-align: right;
+    transform: rotate(-90deg) translate(-100%, 0);
+    transform-origin: 0 0;
+    min-width: 600px;
+    margin-left: -10px;
+    margin-top: 0px
+}
+
+.tab-content {
+    margin: -50px -15px 0px 50px;
+}
+
+.tab-1, .tab-2, .tab-3 {
+background: pink;
+}
+
+.tab-btn {
+border: 2px solid lightgray !important;
+padding: 10px !important;
+}
+
+.tab-panel.hidden {
+    display: none;
+}
+
+.active.tab-btn {
+    /* display: inline; */
+    background: lightblue !important;
 }
