--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -165,15 +165,19 @@ footer{
     min-height: 400px;
     /* border-bottom: #c0ad8c 7px solid; */
 }
+/* content */
+#headshot, .words {
+    border-color: darkolivegreen solid 5px;
+    border-radius: 5px;
+    min-height: 556px
+
+}
 
 #headshot{
     max-width: 100%;
     margin-left: auto;
-    margin-right: auto;
-    border-style: solid;
     border-radius: 10px;
     border-width: 5px;
-    border-color: darkolivegreen;
 }
 
 #main-image{
@@ -291,7 +295,7 @@ padding: 10px !important;
 }
 
 .tab-panel{
-    margin-top: 50px
+    margin-top: 15px
 }
 
 .active.tab-btn {
