--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,10 +166,14 @@ footer{
     /* border-bottom: #c0ad8c 7px solid; */
 }
 /* content */
+.tab-btn {
+    background: aliceblue;
+}
+
 #headshot, .words {
     border: 3px solid darkolivegreen;
     border-radius: 7px;
-    min-height: 556px
+    min-height: 560px
 
 }
 
@@ -248,16 +252,6 @@ img{
     margin-right: auto;
 }
 
-img:hover{
-    max-width: 1200px;
-    max-height: 1200px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-
-}
-
-
 .btn{
     margin: 1px;
 }
@@ -268,10 +262,12 @@ img:hover{
     text-align: right;
     transform: rotate(-90deg) translate(-100%, 0);
     transform-origin: 0 0;
-    min-width: 600px;
-    margin-left: -10px;
-    margin-top: 0px
-}
+    min-width: 560px;
+    margin-left: -12px;
+    margin-top: -2px;
+    background: darkolivegreen;
+    border: 3px solid darkolivegreen;
+    border-radius: 3px;
 
 .tab-content {
     margin: -50px -15px 0px 50px;
