--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,10 @@ body{
     min-height: 80%;
 }
 
+td {
+    padding: 10px;
+}
+
 
 #back-button{
     background-color: rgb(39, 129, 79);
@@ -157,7 +161,6 @@ footer{
     max-height: 50px;
 }
 
-
 /*  INDEX MAIN */
 .main{
     padding: 20px 0 20px 0 ;
@@ -170,15 +173,19 @@ footer{
     background-color: aliceblue !important;
 }
 
-#headshot, .words {
-    border: 3px solid darkolivegreen;
-    border-radius: 7px;
-    min-height: 560px
 
+.words {
+    background: white;
+    color: #333;
+    padding: 40px;
+    height: 630px;
+    overflow: scroll;
 }
 
-#headshot{
+
+#headshot {
     max-width: 100%;
+    height: 65%;
     margin-left: auto;
     border-radius: 10px;
 }
@@ -257,6 +264,19 @@ img{
 
 /* tab-pane section */
 #tab-header {
+    position:fixed;
+    padding-top: 3px;
+    text-align: right;
+    transform: rotate(-90deg) translate(-100%, 0);
+    transform-origin: 0 0;
+    min-width: 50em;
+    margin-left: -12px;
+    margin-top: -2px;
+    /* background: white; */
+    /* border: 6px solid darkolivegreen; */
+    border-radius: 3px;
+}
+/* #tab-header {
     padding-right: 0px;
     text-align: right;
     transform: rotate(-90deg) translate(-100%, 0);
@@ -267,7 +287,7 @@ img{
     background: darkolivegreen;
     border: 3px solid darkolivegreen;
     border-radius: 3px;
-}
+} */
 
 .tab-content {
     margin: -50px -15px 0px 50px;
@@ -293,4 +313,10 @@ padding: 10px !important;
 .active.tab-btn {
     /* display: inline; */
     background: lightblue !important;
+}
+
+.pretty-box {
+    background: darkolivegreen;
+    color: white;
+    border-radius: 6px;
 }
