--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,8 @@
+#main-container {
+    max-width: 1140px; 
+    margin: auto;
+}
+/* Old Shit */
 body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
@@ -51,6 +56,7 @@ td {
     width: 50%;
     border: 3px solid chart;
     padding: 10px;
+    text-align: center;
 }
 
 .big-n-bold{
